--- a/style.css
+++ b/style.css
@@ -76,9 +76,9 @@ button:hover, input:hover {
   background-color: #3F4F9F;
   height: 100vh;
   border-radius: 10px;
-  
+  text-align: center;
+  padding: 20px;
 }
-
 #search {
   width: 100%;
   justify-content: center;
@@ -117,17 +117,22 @@ button:hover, input:hover {
 
 #banner-logo {
   height: 10vh;
-  width: 10vw; 
+  width: 8vw; 
   float: right;
 }
 
 .trending {
   text-align: center;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 
+                      1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
 }
 
 .new-patents {
   display: grid;
-  grid-template-columns: 1fr;
+  grid-template-columns: 1fr 4fr;
+  grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
   width: 60vw;
   float: left;
   border: 1px solid black;
@@ -135,9 +140,15 @@ button:hover, input:hover {
   border-radius: 20px;
   background-color: #25389a;
   text-align: center;
-  
-  
 }
+
+.new-patents img {
+  height: 5vh;
+  width: 7vw;
+  float: left;
+}
+
+
 
 .grid-header {
   background-color: #3144a3;
@@ -146,19 +157,23 @@ button:hover, input:hover {
   border-radius: 10px;
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: center
 }
 
 .trending {
-  display: flex;
+  display: grid;
+  grid-template-columns: 1fr;
   align-items: center;
   height: 100%;
   width: 100%;
-  
+  align-items: center;
+  gap: 10px;
 }
 
-.trending img {
+
+
+.trending button {
   height: 100%;
-  width: 10vw;
-
+  width: 100%;
 }
+
