--- a/style.css
+++ b/style.css
@@ -153,7 +153,6 @@ button:hover, input:hover {
 .grid-header {
   background-color: #3144a3;
   width: 100%;
-  height: 6vh;
   border-radius: 10px;
   display: flex;
   justify-content: center;
@@ -175,5 +174,35 @@ button:hover, input:hover {
 .trending button {
   height: 100%;
   width: 100%;
+  background-color: #3144a3;
+  font-size: large;
+  border-radius: 20px;
+  padding: 10px;
 }
 
+.sidebar {
+  position: absolute;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+  background-color: lightblue;
+  z-index: 3;
+  height: 68vh;
+  border-radius: 15px;
+  width: 0;
+}
+
+
+
+#pullOut {
+  transform: rotate(90deg);
+  height: fit-content;
+  width: fit-content;
+  display: flex;
+  
+}
+
+#pullOut button {
+  float: left;
+  
+}
